--- a/final/login/login.html
+++ b/final/login/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewpoer" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/sign_up.css">
+    <link rel="stylesheet" href="../css/login.css">
     <title>Sign Up</title>
 </head>
 <body>
