--- a/final/login/login.html
+++ b/final/login/login.html
@@ -26,6 +26,13 @@
         
         <label for="status">Status:</label><br>
         <input type="text" id="status" name="status"><br><br>
+
+        <label for="team">Which side are you on?</label><br>
+        <select name="card" id="card">
+            <option value="neutral">Neutral</option>
+            <option value="light">Light Side</option>
+            <option value="dark">Dark Side</option>
+        </select>
         
         <input type="submit" value="Add User">
     </form>
