added a file to handle profile picture handles

--- a/final/login/login.html
+++ b/final/login/login.html
@@ -21,8 +21,9 @@
         <label for="role">Role:</label><br>
         <input type="text" id="role" name="role"><br><br>
         
-        <label for="photo">Photo URL:</label><br>
-        <input type="text" id="photo" name="photo"><br><br>
+        <label for="photo">Photo:</label><br>
+        <input type="hidden" name="MAX_FILE_SIZE" value="750000">
+        <input type="file" id="photo" name="photo" accept="image/png, image/jpeg"><br><br>
         
         <label for="status">Status:</label><br>
         <input type="text" id="status" name="status"><br><br>
