--- a/final/login/login.html
+++ b/final/login/login.html
@@ -29,7 +29,7 @@
         <input type="text" id="status" name="status"><br><br>
 
         <label for="team">Which side are you on?</label><br>
-        <select name="card" id="card">
+        <select name="team" id="team">
             <option value="neutral">Neutral</option>
             <option value="light">Light Side</option>
             <option value="dark">Dark Side</option>
